tests/ui/duplicate_type_names.rs
#[angstropass::langs]
mod langs {
    mod l1 {
        type Foo = i32;
        type Foo = i32;
    }
}

fn main() {}
